fix(widgets/treeview): fix unlegiblity of disabled treeview items
Previously, the treeview used the disabled border colour for disabled items, instead of the disabled text colour. Using the proper colour improves legibility.

BUG: 431839

--- a/src/gtk3/widgets/_treeview.scss
+++ b/src/gtk3/widgets/_treeview.scss
@@ -79,7 +79,7 @@ treeview.view {
   }
 
   &:disabled {
-    color: gtk("@insensitive_borders");
+    color: gtk("@insensitive_fg_color");
     &:selected {
       color: gtk("@insensitive_selected_fg_color");
       &:backdrop {
@@ -87,7 +87,7 @@ treeview.view {
       }
     }
     &:backdrop {
-      color: gtk("@unfocused_insensitive_borders");
+      color: gtk("@insensitive_unfocused_fg_color");
     }
   }
   &.separator {
